--- a/OwinWebApi/Common/Common.csproj
+++ b/OwinWebApi/Common/Common.csproj
@@ -50,23 +50,30 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CircleList.cs" />
     <Compile Include="EmailLog.cs" />
     <Compile Include="Enums\EventId.cs" />
     <Compile Include="Enums\LeftRight.cs" />
     <Compile Include="Enums\SendEmailJobStatus.cs" />
+    <Compile Include="ExtractSteps.cs" />
+    <Compile Include="ImageUtilities.cs" />
     <Compile Include="Models\TypeformQuestionSet.cs" />
     <Compile Include="Models\TypeformResponseHiddenField.cs" />
+    <Compile Include="RandomStringUtilities.cs" />
     <Compile Include="SendHttpRequest.cs" />
     <Compile Include="SendSmsClient.cs" />
-    <Compile Include="TypeformHelper.cs" />
+    <Compile Include="StringNumberUtilities.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Models\Email.cs" />
