--- a/MergePictures/MergePictures/App.config
+++ b/MergePictures/MergePictures/App.config
@@ -5,6 +5,9 @@
     </startup>
   <appSettings>
     <add key="blockNumber" value="3"/>
-    <add key="borderWidthInPixel" value="10"/>
+    <add key="borderWidthInPixel" value="2"/>
+    <add key="backgroundName" value="ffffffff"/>
+    <add key="needScale" value="true"/>
+    <add key="filePath" value="c:\temp"/>
   </appSettings>
 </configuration>
