--- a/MergePictures/UnitTest/App.config
+++ b/MergePictures/UnitTest/App.config
@@ -3,7 +3,8 @@
   <appSettings>
     <add key="blockNumber" value="3"/>
     <add key="borderWidthInPixel" value="2"/>
-    <add key="backgroundName" value="ffffffff"/>
+    <add key="backgroundColorName" value="ffffffff"/>
+    <add key="plotBorderColorName" value="ff000000"/>
     <add key="needScale" value="true"/>
     <add key="filePath" value="c:\temp"/>
   </appSettings>
