Move appsettings to settings.json

--- a/MergePictures/MergePictures/MergePictures.csproj
+++ b/MergePictures/MergePictures/MergePictures.csproj
@@ -45,13 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MergePictureHelpers.cs" />
-    <Compile Include="OverwritePixel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MergeImage\MergeImage.csproj">
+      <Project>{edb15a9a-3983-475e-bc4f-72dd32b7f941}</Project>
+      <Name>MergeImage</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
