Update logic to scale color map to match DHA image

--- a/MergePictures/MergeImage/Settings.json
+++ b/MergePictures/MergeImage/Settings.json
@@ -4,5 +4,5 @@
 	"backgroundColorName":"ffffffff",
 	"plotBorderColorName":"ff000000",
 	"needScale":true,
-	"mergedFileDefaultPath":"c:\\temp"
+	"mergedFileDefaultPath":"c:\\Temp"
 }
